# vinaigrette

./: .gitignore  .travis.yml  LICENSE.md  README.md  package.yaml  stack.yaml  vinaigrette.cabal
app/: Main.hs
src/: Vinaigrette.hs
src/Vinaigrette/: Api.hs  App.hs  Log.hs  Server.hs
tests/: Main.hs
tests/servant/: Specs.hs
